--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -122,7 +122,8 @@
         padding: 0em 2em;
 
         .container {
-            overflow: hidden;
+            scroll-behavior: smooth;
+            overflow-x: hidden;
 
             a {
                 flex: 0 0 auto;
