--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -41,6 +41,14 @@
                 @media (max-width: 1100px) {
                     width: 33.3333333%;
                 }
+
+                @media (max-width: 800px) {
+                    width: 50%;
+                }
+
+                @media (max-width: 600px) {
+                    width: 100%;
+                }
             }
         }
     }
