--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -43,6 +43,7 @@
 
         .services {
             gap: 2em;
+            transition: transform 0.5s ease;
 
             .service {
                 position: relative;
