--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -32,18 +32,18 @@
     .home-services-section {
         .services {
             .service {
-                width: 20%;
+                width: calc(100% / 5);
 
                 @media (max-width: 1300px) {
-                    width: 25%;
+                    width: calc(100% / 4);
                 }
 
                 @media (max-width: 1100px) {
-                    width: 33.3333333%;
+                    width: calc(100% / 3);
                 }
 
                 @media (max-width: 800px) {
-                    width: 50%;
+                    width: calc(100% / 2);
                 }
 
                 @media (max-width: 600px) {
