Working on GigFilter. added all the filter and param calls now just need to add demo data and button functionality

--- a/Frontend/src/assets/styles/basics/_helpers.scss
+++ b/Frontend/src/assets/styles/basics/_helpers.scss
@@ -83,10 +83,12 @@
 }
 
 .black {
-  color: $clrPrimary2;
+  fill: $clrPrimary2;
 }
 
-i {
-    display: flex;
-    align-items: center;
-}
+// i {
+//     svg{
+//         width:100%;
+//         height: 100%;
+//     }
+// }
