--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -21,6 +21,7 @@
 @import "cmps/GigOrder";
 @import "cmps/GigInfo";
 
+@import "cmps/GigFilter";
 @import "cmps/GigList";
 @import "cmps/GigPreview";
 
