--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -5,6 +5,7 @@ $clrPrimary2: #222325;
 $clrSecondary1: #f5f5f5;
 $clrSecondary2: #dadbdd;
 $clrSecondary3: #ced1d6;
+$clrSecondary45: #c5c6c9;
 $clrSecondary4: #b5b6ba;
 $clrSecondary5: #74767e;
 $clrSecondary6: #62646a;
