--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import "cmps/AppHeader";
 @import "cmps/AppFooter";
 @import "cmps/WelcomeSection";
+@import "cmps/SearchBar";
 
 @import "cmps/GigHeader";
 @import "cmps/AboutSeller";
