default user img added

--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -77,14 +77,13 @@
                 margin-left: 0.4em;
 
                 h1 {
-                    font-family: "macan-regular";
+                    font-family: "macan-bold";
                     line-height: 48px;
-                    font-weight: bold;
+                    font-weight: 100;
                     font-size: 40px;
                     max-width: 500px;
 
                     span {
-                        font-style: italic;
                         font-family: 'domain-display-medium';
                         font-weight: 500;
                     }
