--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -16,6 +16,10 @@
     z-index: 0;
   }
 
+  .gig-title img:hover {
+    text-decoration: underline;
+  } 
+
   .preview-user-info {
     font-size: 0.875rem;
     display: flex;
@@ -66,5 +70,11 @@
     height: 2.8125em;
     padding: 0.625em 0.5em;
     border-top: 0.0625em solid $clrSecondary2;
+    
+    span{
+      .i {
+        display:flex;
+      }
+    }
   }
 }
