--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -21,13 +21,14 @@
 @import "cmps/AboutSeller";
 @import "cmps/GigOrder";
 @import "cmps/GigInfo";
+@import "cmps/GigReviews";
 
 @import "cmps/GigFilter";
 @import "cmps/GigList";
 @import "cmps/GigPreview";
 
 @import "cmps/UserInfo";
-@import "cmps/UserGigs.scss";
+@import "cmps/UserGigs";
 
 @import "cmps/ImageCarousel";
 @import "cmps/ShoppingCart";
