--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -78,9 +78,12 @@
             .user-info {
                 display: flex;
                 align-items: center;
+                width: 32px;
+                height: 32px;
+                margin: auto;
 
                 img {
-                    margin-right: 8px;
+                    border-radius: 50%;
                 }
             }
         }
