--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -82,8 +82,15 @@
                 height: 32px;
                 margin: auto;
 
-                img {
-                    border-radius: 50%;
+                a {
+                    align-self: center;
+                    width: 100%;
+                    height: 100%;
+
+                    img {
+                        border-radius: 50%;
+                        height: 100%;
+                    }
                 }
             }
         }
