orders are created by the logged in user now

--- a/Frontend/src/assets/styles/cmps/_GigOrder.scss
+++ b/Frontend/src/assets/styles/cmps/_GigOrder.scss
@@ -1,6 +1,9 @@
 .gig-order{
     position: sticky;
     top:20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width:45%;
     height: 520px;
     padding: 24px;
@@ -30,22 +33,27 @@
             margin-inline-end: 12px;
         }
     }
-    .continue{
+    .continue-btn{
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        button{
+        .continue{
             display: flex;
-            align-items: center;
             justify-content: center;
-            width: 100%;
-            height: 40px;
-            background-color: $clr1;
-            color: $clrPrimary1;
-            border: 1px solid $clr1;
-            border-radius: 3px;
-            img{
-                position: relative;
-                left: 30%;
+            button{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                height: 40px;
+                background-color: $clr1;
+                color: $clrPrimary1;
+                border: 1px solid $clr1;
+                border-radius: 3px;
+                img{
+                    position: relative;
+                    left: 30%;
+                }
             }
         }
     }
