orders now appear in profile

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -29,6 +29,7 @@
 
 @import "cmps/UserInfo";
 @import "cmps/UserGigs";
+@import "cmps/UserOrders";
 
 @import "cmps/ImageCarousel";
 @import "cmps/ShoppingCart";
