--- a/Frontend/src/assets/styles/cmps/_UserOrders.scss
+++ b/Frontend/src/assets/styles/cmps/_UserOrders.scss
@@ -22,6 +22,15 @@
                 border: 1px solid $clrSecondary2;
                 margin-block-start: 20px;
                 background-color: $clrPrimary1;
+                &.pending{
+                    background-color: yellow;
+                }
+                &.denied{
+                    background-color: red;
+                }
+                &.accepted{
+                    background-color: rgb(53, 231, 53);
+                }
                 .order-buttons{
                     display: flex;
                     justify-content: space-between;
