--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -8,7 +8,7 @@
 // }
 
 html {
-  font-family: macan-regular;
+  font-family: 'macan-regular';
   line-height: 1.6;
 }
 
@@ -31,6 +31,7 @@ h6 {
 
 img {
   width: 100%;
+  height: 100%;
 }
 
 p {
