header logo adjusted

--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -18,9 +18,10 @@
 
     h1 {
         margin: 0;
-        font-family: inherit;
-        color: $clrSecondary7;
+        font-family: arial;
+        color: $clrSecondary8;
         font-size: 40px;
+        letter-spacing: -3px;
 
         span {
             color: $bgColor2;
