api for gig has been added

--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -82,6 +82,7 @@
                     font-weight: 100;
                     font-size: 40px;
                     max-width: 500px;
+                    margin-bottom: 0.5em;
 
                     span {
                         font-family: 'domain-display-medium';
