appheader now has 3 stages to show its contents, only applies to home page

--- a/Frontend/src/assets/styles/cmps/_AppFooter.scss
+++ b/Frontend/src/assets/styles/cmps/_AppFooter.scss
@@ -1,6 +1,6 @@
 .app-footer {
     color: $clrSecondary7;
-    padding: 20px;
+    padding: 1em 2em;
     text-align: center;
     position: relative;
     justify-content: space-between;
