--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -1,6 +1,4 @@
 .app-header {
-    background: $clrPrimary1;
-    color: $clrPrimary2;
     position: relative;
     z-index: 10;
     width: 100%;
@@ -19,7 +17,6 @@
     h1 {
         margin: 0;
         font-family: arial;
-        color: $clrSecondary8;
         font-size: 40px;
         letter-spacing: -3px;
 
@@ -33,8 +30,7 @@
     }
 
     .main-nav {
-        padding: 1em 2em;
-        border-bottom: 1px solid $clrSecondary3;
+        padding: 0.5em 2em;
 
         .nav-links {
             list-style-type: none;
@@ -51,22 +47,23 @@
                 transition: color 0.3s, background-color 0.3s, border 0.3s;
 
                 &:hover {
-                    color: $bgColor2;
+                    color: $bgColor3 !important;
                 }
             }
 
             .join {
                 padding: 10px 16px;
-                color: #2dd12d;
-                border: 1px solid #2dd12d;
+                border: 1px solid $bgColor3;
+                color: $bgColor3;
                 border-radius: 5px;
                 font-size: 14px;
                 font-family: "macan-bold";
                 background: none;
 
                 &:hover {
-                    background-color: $bgColor2;
-                    color: $clrPrimary1;
+                    background-color: #1dbf73;
+                    color: #fff !important;
+                    border-color: #1dbf73 !important;
                 }
             }
 
@@ -103,12 +100,16 @@
         position: relative;
         overflow: hidden;
         color: $clrSecondary7;
-        border-bottom: 2px solid $clrSecondary3;
         padding: 0em 2em;
 
         .container {
             scroll-behavior: smooth;
             overflow-x: hidden;
+
+            .hidden {
+                visibility: hidden;
+                opacity: 0;
+            }
 
             a {
                 flex: 0 0 auto;
