--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -24,6 +24,7 @@
 @import "cmps/GigReviews";
 
 @import "cmps/GigFilter";
+@import "cmps/MenuFilterContent";
 @import "cmps/GigList";
 @import "cmps/GigPreview";
 
