--- a/Frontend/src/assets/styles/cmps/_GigFilter.scss
+++ b/Frontend/src/assets/styles/cmps/_GigFilter.scss
@@ -33,6 +33,9 @@
   background-color: #fff;
 
   .floating-top-bar {
+    .floating-menu {
+      position: relative;
+    }
     margin-block-start: 1em;
     .filter-nav {
       display: flex;
@@ -53,7 +56,6 @@
     height: 1em;
     width: 100%;
     background-color: #fff;
-    box-shadow: 0 9px 20px -13px #74767ed9;
   }
 }
 // .gig-filter::after {
