added another section to home page

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import "cmps/WelcomeSection";
 @import "cmps/SearchBar";
 @import "cmps/LoginSignup";
+@import "cmps/ServicesCarousel";
 
 @import "cmps/GigHeader";
 @import "cmps/AboutSeller";
