readjusted user and gig previews, cleaner code in scss

--- a/Frontend/src/assets/styles/cmps/_GigReviews.scss
+++ b/Frontend/src/assets/styles/cmps/_GigReviews.scss
@@ -1,17 +1,20 @@
-.gig-reviews{
+.gig-reviews {
     background-color: white;
 }
-.gig-review{
+
+.gig-review {
     display: flex;
     flex-direction: column;
     background-color: white;
     border-block-start: 1px solid black;
     margin-block-end: 10px;
-    .stars3{
-        img{
+
+    .stars {
+        img {
             height: 14px;
             width: 14px;
         }
+
         margin: 0;
     }
 }
