--- a/Frontend/src/assets/styles/cmps/_MenuFilterContent.scss
+++ b/Frontend/src/assets/styles/cmps/_MenuFilterContent.scss
@@ -2,7 +2,7 @@
     background: #fff;
     border: 1px solid #e4e5e7;
     border-radius: 8px;
-    box-shadow: 0 12px 18px rgba(0,0,0,.14);
+    box-shadow: 0 12px 18px rgba(0, 0, 0, .14);
     box-sizing: border-box;
     font-size: 14px;
     line-height: 22px;
@@ -11,7 +11,7 @@
     pointer-events: none;
     position: absolute;
     top: 100%;
-    transition: all .24s cubic-bezier(.215,.61,.355,1),opacity .12s cubic-bezier(.215,.61,.355,1);
+    transition: all .24s cubic-bezier(.215, .61, .355, 1), opacity .12s cubic-bezier(.215, .61, .355, 1);
     transition-delay: .12s;
     z-index: 3;
 
@@ -24,7 +24,7 @@
         padding: 24px;
         position: relative;
         top: -8px;
-        transition: all .24s cubic-bezier(.215,.61,.355,1);
+        transition: all .24s cubic-bezier(.215, .61, .355, 1);
         transition-delay: .24s;
 
         min-height: 150px; // only if .grouped
