--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -16,6 +16,8 @@ $clrSeconday9: #f1fdf7;
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
 $bgColor3: #1dbf73;
+$bgColor4: #45091b;
+$bgColor5: #19a463;
 
 $clr1: #19a463;
 $clr2: #78cdd2;
