--- a/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
@@ -8,7 +8,7 @@
   border: 1px solid $clrSecondary2;
   border-top-left-radius: 0.5em;
   border-top-right-radius: 0.5em;
-//   z-index: 0;
+  //   z-index: 0;
   button {
     margin: 0;
   }
@@ -37,10 +37,16 @@
     .left {
       border-top-right-radius: 50%;
       border-bottom-right-radius: 50%;
+      svg {
+        transform: rotate(90deg);
+      }
     }
     .right {
       border-top-left-radius: 50%;
       border-bottom-left-radius: 50%;
+      svg {
+        transform: rotate(-90deg);
+      }
     }
     .arrow {
       background: rgba(0, 0, 0, 0.2);
@@ -69,7 +75,6 @@
       margin: 0 5px;
       cursor: pointer;
       transition: transform 0.2s ease-in-out;
-      
     }
 
     .dot:hover {
