user dropdown menu added

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import "cmps/SearchBar";
 @import "cmps/LoginSignup";
 @import "cmps/ServicesCarousel";
+@import "cmps/CategoryNavbar";
 
 @import "cmps/GigHeader";
 @import "cmps/AboutSeller";
