--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -77,91 +77,57 @@
             }
 
             .user-info {
-                display: flex;
                 align-items: center;
                 width: 32px;
                 height: 32px;
                 margin: auto;
-
-                a {
-                    align-self: center;
-                    width: 100%;
-                    height: 100%;
-
-                    img {
-                        border-radius: 50%;
-                    }
-                }
-            }
-        }
-    }
-
-    .category-nav {
-        position: relative;
-        overflow: hidden;
-        color: $clrSecondary7;
-        padding: 0em 2em;
-
-        .container {
-            scroll-behavior: smooth;
-            overflow-x: hidden;
-
-            .hidden {
-                visibility: hidden;
-                opacity: 0;
-            }
-
-            a {
-                flex: 0 0 auto;
-                color: inherit;
-                line-height: 24px;
-                padding: 8px 0px;
                 position: relative;
 
-                &:not(:first-child) {
-                    margin-left: 1em;
-                }
-
-                &::after {
-                    content: '';
-                    width: 100%;
-                    height: 3px;
-                    background: $bgColor2;
+                .user-dropdown {
                     position: absolute;
-                    bottom: 0;
-                    left: 0;
-                    transform: scaleX(0);
-                    transition: transform 0.3s ease-in-out;
-                    transform-origin: bottom right;
+                    top: 150%;
+                    right: 0;
+                    background-color: #fff;
+                    border: 1px solid #ddd;
+                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                    z-index: 10;
+
+                    &::before {
+                        content: "";
+                        width: 0;
+                        height: 0;
+                        border-style: solid;
+                        border-width: 5px 17px 17px 17px;
+                        border-color: transparent transparent #ddd transparent;
+                        position: absolute;
+                        top: -22px;
+                        right: -1px;
+                        z-index: -1;
+                    }
+
+                    &::after {
+                        content: "";
+                        width: 0;
+                        height: 0;
+                        border-style: solid;
+                        border-width: 4px 16px 16px 16px;
+                        border-color: transparent transparent #fff transparent;
+                        position: absolute;
+                        top: -20px;
+                        right: 0;
+                        z-index: 0;
+                    }
+
+                    a {
+                        display: block;
+                        padding: 10px 15px;
+                        color: #333;
+                    }
                 }
 
-                &:hover::after {
-                    transform: scaleX(1);
-                    transform-origin: bottom left;
+                img {
+                    border-radius: 50%;
                 }
-            }
-        }
-
-        .carousel-btn {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            cursor: pointer;
-            z-index: 1;
-            padding: 1em 0em;
-            background: $clrPrimary1;
-
-            &.left-side,
-            &.right-side {
-                box-shadow: 0px 0px 20px 20px $clrPrimary1;
-            }
-
-            &.left-side {
-                left: 30px;
-            }
-
-            &.right-side {
-                right: 30px;
             }
         }
     }
