--- a/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
@@ -25,40 +25,46 @@
   }
 
   .arrow-container {
+    user-select: none;
     opacity: 0;
-    display: flex;
-    justify-content: space-between;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
     width: 100%;
-    transition: opacity ease-in 0.3s;
-    // pointer-events: none;
-
-    .left {
-      border-top-right-radius: 50%;
-      border-bottom-right-radius: 50%;
-      svg {
-        transform: rotate(90deg);
-      }
-    }
-
-    .right {
-      border-top-left-radius: 50%;
-      border-bottom-left-radius: 50%;
-      svg {
-        transform: rotate(-90deg);
-      }
-    }
-
+    // transition: all ease-in 0.3s;
     .arrow {
-      background: rgba(0, 0, 0, 0.2);
+      background: transparent;
+      width: 25px;
+      transform: translateY(-50%);
       color: white;
       border: none;
       font-size: 1em;
-      // padding: 10px;
+      padding: 0.25em;
       cursor: pointer;
-      transition: background-color 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+
+      &.left {
+        position: absolute;
+        right: auto;
+        left: 0.5em;
+        border-top-right-radius: 50%;
+        border-bottom-right-radius: 50%;
+        svg {
+          transform: rotate(90deg);
+          fill: $clrPrimary1;
+        }
+      }
+
+      &.right {
+        position: absolute;
+        left: auto;
+        right: 0.5em;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+        svg {
+          transform: rotate(-90deg);
+          fill: $clrPrimary1;
+        }
+      }
     }
 
     .arrow:hover {
@@ -87,14 +93,23 @@
     }
 
     .dot.active {
-      background-color: #007bff;
-      /* Active dot color */
+      background-color: whitesmoke;
     }
   }
 }
 
 .carousel-container:hover {
   .arrow-container {
+    background-color: #fff;
     opacity: 1;
+    .arrow{
+      background: rgba(0, 0, 0, 0.2);
+    }
+    .right {
+      margin-inline-end: -9px;
+    }
+    .left {
+      margin-inline-start: -9px;
+    }
   }
 }
