inputs in login form now take 100%

--- a/Frontend/src/assets/styles/cmps/_LoginSignup.scss
+++ b/Frontend/src/assets/styles/cmps/_LoginSignup.scss
@@ -84,6 +84,7 @@
                         padding: 8px 12px;
                         border: 1px solid $clrSecondary45;
                         border-radius: 5px;
+                        width: 100%;
 
                         &:focus {
                             border: 1px solid $clrSecondary5;
