initial dashboard page

--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -27,7 +27,7 @@
 
     .home-info-wrapper {
         width: 100%;
-        background: $clrSeconday9;
+        background: $clrSecondary9;
 
         .info-section {
             max-width: 1400px;
