--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -11,7 +11,7 @@ $clrSecondary5: #74767e;
 $clrSecondary6: #62646a;
 $clrSecondary7: #575353;
 $clrSecondary8: #404145;
-$clrSeconday9: #f1fdf7;
+$clrSecondary9: #f1fdf7;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
